--- a/U1D5-Portfolio-BMcMahon.html
+++ b/U1D5-Portfolio-BMcMahon.html
@@ -18,12 +18,12 @@
 
     <header>
         <!--Title-->
-        <div class="bg-darkgreen">
+        <div class="bg-darkgreen color-yellow text-center">
             <p>Benjamin Michael McMahon</p>
         </div>
 
         <!--navBar-->
-        <div class "bg-lightgreen color orange">
+        <div class "bg-lightgreen color-orange text-left">
             <span>About me</span>
             <span>Family</span>
             <span>Education</span>
@@ -43,45 +43,67 @@
 
 
     <main>
+        <section class="section">
+            <div class"section1"</div>
 
-        <div class="aboutmecard">
-            <img src="./aboutme.png" alt="picture of Ben McMahon">
-        </div>
+                <div class="aboutmecard">
+                    <img src="./aboutme.png" alt="picture of Ben McMahon">
+                    <p> My name in Ben McMahon</p>
+                    <p>I am 32 years old </p>
+                    <p>I live in Cardiff, Wales</p>
+                </div>
 
-        <div class="familycard">
-            <img src="./family.png" alt="picture of Ben and Elijah McMahon">
-        </div>
+                <div class="familycard">
+                    <img src="./family.png"
+                        alt="picture of Ben and Elijah McMahon">
+                    <p>This is my son Elijah</p>
+                    <p>He is 1 year old </p>
+                    <p>His favourite show is Winne the Pooh</p>
+                </div>
 
-        <div class="educationcard">
-            <img src="./education.png"
-                alt="picture ofaBen and Elijah McMahon at Ben's graduation">
-        </div>
+            </div>
+        </section>
 
-        <div class="workcard">
-            <img src="./food.png" alt="picture of Ben eating pizza">
-        </div>
+        <section class="section2">
+            <div class="educationcard">
+                <img src="./education.png"
+                    alt="picture ofBen and Elijah McMahon at Ben's graduation">
+                <p>Undergraduate Law at the University of Liverpool</p>
+                <p>Postgraduate Education at Cardiff Metropolitan University</p>
+                <p>FullStack Developer Bootcamp at Epicode</p>
+            </div>
 
-        <div class="hobbiescard">
-            <img src="./mma.png" alt="picture of Ben practising MMA">
-        </div>
+            <div class="workcard">
+                <img src="./food.png" alt="picture of Ben eating pizza">
+                <p>Airbnb Business</p>
+                <p>Software Sales</p>
+                <p>next up Developer</p>
+            </div>
 
-
-
-
-
+            <div class="hobbiescard">
+                <img src="./mma.png" alt="picture of Ben practising MMA">
+                <p>Part of MMA team</p>
+                <p>Cardiff City FC</p>
+                <p>Wales Rugby & Football</p>
+            </div>
+        </section>
 
 
     </main>
 
+    <Footer>
+        <div class="bg-darkgreen center-left">
+            <p>Benjamin Michael McMahon</p>
+        </div>
+        <div class "bg-lightgreen color orange">
+            <span>About me</span>
+            <span>Family</span>
+            <span>Education</span>
+            <span>Work Experience</span>
+            <span>Hobbies</span>
+        </div>
 
-
-
-
-
-
-
-
-
+    </Footer>
 
 
 </body>
