--- a/U1D5-Portfolio-BMcMahon.html
+++ b/U1D5-Portfolio-BMcMahon.html
@@ -19,7 +19,7 @@
     <header>
         <!--Title-->
         <div class="bg-darkgreen color-yellow text-center">
-            <p>Benjamin Michael McMahon</p>
+            <h1>Benjamin Michael McMahon</h1>
         </div>
 
         <!--navBar-->
@@ -43,41 +43,65 @@
 
 
     <main>
-        <section class="section">
-            <div class"section1"</div>
+        <!-- <section class="section1"> -->
 
-                <div class="aboutmecard">
-                    <img src="./aboutme.png" alt="picture of Ben McMahon">
-                    <p> My name in Ben McMahon</p>
-                    <p>I am 32 years old </p>
-                    <p>I live in Cardiff, Wales</p>
-                </div>
+        <div class="aboutmecard">
+            <img src="./aboutme.png" alt="picture of Ben McMahon">
+            <div class="aboutmeinfo" </div>
+                <h2>ABOUT ME</h2>
+                <div class="name">My name in Ben McMahon</div>
+                <div class="age">32 years old </div>
+                <div class="location">live in Cardiff, Wales</div>
+            </div>
+        </div>
 
-                <div class="familycard">
+        <div class="familycard">
+            <img src="./family.png" alt="picture of Ben & ElijahMcMahon">
+            <div class="familyinfo" </div>
+                <h2>FAMILY</h2>
+                <div class="son">This is my son Elijah</div>
+                <div class="age">1 year old</div>
+                <div class="location">favourite show is Winne the Pooh</div>
+            </div>
+        </div>
+
+        <!--
+        <div class="row1">
+            <div class="block1"></div>
+            <div class="block2"></div>
+          </div>
+        -->
+
+
+
+        <!-- <div class="familycard">
                     <img src="./family.png"
                         alt="picture of Ben and Elijah McMahon">
                     <p>This is my son Elijah</p>
                     <p>He is 1 year old </p>
                     <p>His favourite show is Winne the Pooh</p>
-                </div>
+                </div> -->
 
-            </div>
         </section>
-
+        <!--
         <section class="section2">
+
             <div class="educationcard">
-                <img src="./education.png"
-                    alt="picture ofBen and Elijah McMahon at Ben's graduation">
+                <img src="./education.png" <div id="idsection1">
+                alt="picture ofBen and Elijah McMahon at Ben's graduation">
                 <p>Undergraduate Law at the University of Liverpool</p>
                 <p>Postgraduate Education at Cardiff Metropolitan University</p>
                 <p>FullStack Developer Bootcamp at Epicode</p>
             </div>
+            </div>
 
             <div class="workcard">
                 <img src="./food.png" alt="picture of Ben eating pizza">
-                <p>Airbnb Business</p>
-                <p>Software Sales</p>
-                <p>next up Developer</p>
+                <div id="idsection1">
+                    <p>Airbnb Business</p>
+                    <p>Software Sales</p>
+                    <p>next up Developer</p>
+                </div>
             </div>
 
             <div class="hobbiescard">
@@ -88,9 +112,9 @@
             </div>
         </section>
 
-
+-->
     </main>
-
+    <!--
     <Footer>
         <div class="bg-darkgreen center-left">
             <p>Benjamin Michael McMahon</p>
@@ -104,7 +128,7 @@
         </div>
 
     </Footer>
-
+-->
 
 </body>
 
