--- a/U1D5-Portfolio-BMcMahon.html
+++ b/U1D5-Portfolio-BMcMahon.html
@@ -23,7 +23,7 @@
         </div>
 
         <!--navBar-->
-        <div class "bg-lightgreen color-orange text-left">
+        <div class="bg-lightgreen color-orange text-left">
             <span>About me</span>
             <span>Family</span>
             <span>Education</span>
@@ -43,29 +43,74 @@
 
 
     <main>
-        <!-- <section class="section1"> -->
-
-        <div class="aboutmecard">
+        <div class="aboutme">
+            <div class="aboutmeoverlay"></div>
             <img src="./aboutme.png" alt="picture of Ben McMahon">
             <div class="aboutmeinfo" </div>
                 <h2>ABOUT ME</h2>
-                <div class="name">My name in Ben McMahon</div>
-                <div class="age">32 years old </div>
-                <div class="location">live in Cardiff, Wales</div>
-            </div>
-        </div>
+                <div class="aboutmetext" </div>
+                    <div class="name">My name in Ben McMahon</div>
+                    <div class="age">32 years old </div>
+                    <div class="location">live in Cardiff, Wales</div>
+                </div>
 
-        <div class="familycard">
-            <img src="./family.png" alt="picture of Ben & ElijahMcMahon">
+
+    </main>
+
+
+    <main>
+        <div class="family">
+            <div class="familyoverlay"></div>
+            <img src="./family.png" alt="picture of Ben and Elijah McMahon">
             <div class="familyinfo" </div>
                 <h2>FAMILY</h2>
-                <div class="son">This is my son Elijah</div>
-                <div class="age">1 year old</div>
-                <div class="location">favourite show is Winne the Pooh</div>
+                <div class="familytext" </div>
+                    <div class="son">This is my son Elijah</div>
+                    <div class="age2">1 year old</div>
+                    <div class="show">favourite show is Winne the Pooh</div>
+                </div>
+
+
+    </main>
+
+
+    <section class="section2">
+        <div class="hobbies">
+            <div class="hobbiesoverlay"></div>
+            <img src="./mma.png" alt="MMA picture">
+            <div class="hobbiesinfo" </div>
+                <h2>HOBBIES</h2>
+                <div class="hobbiestext" </div>
+                    <div class=wales">Wales Rugby & Football Teams</div>
+                    <div class="mma">MMA</div>
+                    <div class="ccfc">Cardiff City FC</div>
+                </div>
+
+
+
+
+
+    </section>
+
+    <!--
+
+    <div class="familycard">
+        <img src="./family.png" alt="picture of Ben & ElijahMcMahon">
+        <div class="familyinfo" </div>
+            <h2>FAMILY</h2>
+            <div class="son">This is my son Elijah</div>
+            <div class="age">1 year old</div>
+            <div class="location">favourite show is Winne the Pooh
             </div>
         </div>
+    </div>
+-->
 
-        <!--
+
+    <!-- </section> -->
+
+
+    <!--
         <div class="row1">
             <div class="block1"></div>
             <div class="block2"></div>
@@ -74,16 +119,14 @@
 
 
 
-        <!-- <div class="familycard">
+    <!-- <div class="familycard">
                     <img src="./family.png"
                         alt="picture of Ben and Elijah McMahon">
                     <p>This is my son Elijah</p>
                     <p>He is 1 year old </p>
                     <p>His favourite show is Winne the Pooh</p>
                 </div> -->
-
-        </section>
-        <!--
+    <!--
         <section class="section2">
 
             <div class="educationcard">
@@ -111,9 +154,7 @@
                 <p>Wales Rugby & Football</p>
             </div>
         </section>
-
 -->
-    </main>
     <!--
     <Footer>
         <div class="bg-darkgreen center-left">
