--- a/U1D5-Portfolio-BMcMahon.html
+++ b/U1D5-Portfolio-BMcMahon.html
@@ -51,7 +51,7 @@
                 <div class="aboutmetext" </div>
                     <div class="name">My name in Ben McMahon</div>
                     <div class="age">32 years old </div>
-                    <div class="location">live in Cardiff, Wales</div>
+                    <div class="location">Cardiff, Wales</div>
                 </div>
 
 
@@ -65,9 +65,9 @@
             <div class="familyinfo" </div>
                 <h2>FAMILY</h2>
                 <div class="familytext" </div>
-                    <div class="son">This is my son Elijah</div>
+                    <div class="son">My son Elijah</div>
                     <div class="age2">1 year old</div>
-                    <div class="show">favourite show is Winne the Pooh</div>
+                    <div class="show">Winnie the Pooh</div>
                 </div>
 
 
@@ -81,16 +81,59 @@
             <div class="hobbiesinfo" </div>
                 <h2>HOBBIES</h2>
                 <div class="hobbiestext" </div>
-                    <div class=wales">Wales Rugby & Football Teams</div>
+                    <div class="wales">Wales Rugby & Football Teams</div>
                     <div class="mma">MMA</div>
                     <div class="ccfc">Cardiff City FC</div>
+                </div>
+    </section>
+
+
+    <section class="section3">
+        <div class="education">
+            <div class="educationoverlay"></div>
+            <img src="./education.png" alt="Graduation picture">
+            <div class="educationinfo" </div>
+                <h2>EDUCATION</h2>
+                <div class="educationtext" </div>
+                    <div class="undergrad">Law @
+                        University of Liverpool</div>
+                    <div class="postgrad">PGCE @
+                        Cardiff Met</div>
+                    <div class="code">FullStack Bootcamp @ Epicode
+                    </div>
+                </div>
+    </section>
+
+
+    <section class="section4">
+        <div class="work">
+            <div class="workoverlay"></div>
+            <img src="./food.png" alt="Pizza picture">
+            <div class="workinfo" </div>
+                <h2>WORK</h2>
+                <div class="worktext" </div>
+                    <div class="airbnb">airbnb business</div>
+                    <div class="sales">software sales</div>
+                    <div class="next">what's next...?</div>
                 </div>
 
 
 
-
-
     </section>
+
+    <Footer>
+        <div class="bg-darkgreen center-left">
+            <p>Benjamin Michael McMahon</p>
+        </div>
+        <div class "bg-lightgreen color orange">
+            <span>About me</span>
+            <span>Family</span>
+            <span>Education</span>
+            <span>Work Experience</span>
+            <span>Hobbies</span>
+        </div>
+
+    </Footer>
 
     <!--
 
@@ -131,7 +174,7 @@
 
             <div class="educationcard">
                 <img src="./education.png" <div id="idsection1">
-                alt="picture ofBen and Elijah McMahon at Ben's graduation">
+                alt="picture of Ben and Elijah McMahon at Ben's graduation">
                 <p>Undergraduate Law at the University of Liverpool</p>
                 <p>Postgraduate Education at Cardiff Metropolitan University</p>
                 <p>FullStack Developer Bootcamp at Epicode</p>
@@ -156,19 +199,7 @@
         </section>
 -->
     <!--
-    <Footer>
-        <div class="bg-darkgreen center-left">
-            <p>Benjamin Michael McMahon</p>
-        </div>
-        <div class "bg-lightgreen color orange">
-            <span>About me</span>
-            <span>Family</span>
-            <span>Education</span>
-            <span>Work Experience</span>
-            <span>Hobbies</span>
-        </div>
-
-    </Footer>
+   
 -->
 
 </body>
