--- a/U1D5-Portfolio-BMcMahon.html
+++ b/U1D5-Portfolio-BMcMahon.html
@@ -24,7 +24,7 @@
 
         <!--navBar-->
         <div class="bg-lightgreen color-orange text-left">
-            <span>About me</span>
+            <span><a href="http://www.google.com">About me</a></span>
             <span>Family</span>
             <span>Education</span>
             <span>Work Experience</span>
@@ -125,7 +125,8 @@
         <div class="bg-darkgreen center-left">
             <p>Benjamin Michael McMahon</p>
         </div>
-        <div class "bg-lightgreen color orange">
+        <a href="#top">Back to top</a>
+        <div class="bg-lightgreen color-orange text-left">
             <span>About me</span>
             <span>Family</span>
             <span>Education</span>
