--- a/U1D5-Portfolio-BMcMahon.html
+++ b/U1D5-Portfolio-BMcMahon.html
@@ -25,10 +25,10 @@
         <!--navBar-->
         <div class="bg-lightgreen color-orange text-left">
             <span><a href="http://www.google.com">About me</a></span>
-            <span>Family</span>
+            <!-- <span>Family</span> -->
             <span>Education</span>
             <span>Work Experience</span>
-            <span>Hobbies</span>
+            <span>Github/LinkedIn</span>
         </div>
     </header>
 
@@ -49,7 +49,7 @@
             <div class="aboutmeinfo" </div>
                 <h2>ABOUT ME</h2>
                 <div class="aboutmetext" </div>
-                    <div class="name">My name in Ben McMahon</div>
+                    <div class="name">Ben McMahon</div>
                     <div class="age">32 years old </div>
                     <div class="location">Cardiff, Wales</div>
                 </div>
@@ -73,7 +73,7 @@
 
     </main>
 
-
+    <!--
     <section class="section2">
         <div class="hobbies">
             <div class="hobbiesoverlay"></div>
@@ -86,6 +86,8 @@
                     <div class="ccfc">Cardiff City FC</div>
                 </div>
     </section>
+
+    -->
 
 
     <section class="section3">
@@ -127,11 +129,11 @@
         </div>
         <a href="#top">Back to top</a>
         <div class="bg-lightgreen color-orange text-left">
-            <span>About me</span>
-            <span>Family</span>
-            <span>Education</span>
-            <span>Work Experience</span>
-            <span>Hobbies</span>
+            <span>LinkedIn</span>
+            <span>Github</span>
+            <span>CV</span>
+            <span>email</span>
+            <span>Discord</span>
         </div>
 
     </Footer>
